Premiere structure HTML

--- a/cours1/Index.html
+++ b/cours1/Index.html
@@ -1,1 +1,18 @@
-HELLO WORLD !!!!
+<!DOCTYPE html>
+<html>
+<head>
+  <title> Hello c'est ma premiere page !</title>
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<body>
+  <h1>&#127757; World News &#127757;</h1>
+  <img> <iframe src="https://giphy.com/embed/noyBeNjH4nbtXV5ZLA" width="660" height="340" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/HBOMax-hbomax-tomandjerry-tomandjerryonhbomax-noyBeNjH4nbtXV5ZLA"></a></p>
+  <h2>Hello World</h2>
+   <p>+Comment-allez vous ?</p> 
+   <br> <p>-Comme ci</p>
+   <br> <p>-Comme ca</p>
+   <br> <p>+Pour la solution, c'est <a href="https://www.youtube.com/watch?v=6CHs4x2uqcQ"> ici !</a> <span style='font-size:20px;'>&#11013;</span></p>
+
+</body>
+</html>
